fix final page style  (bit too much content for 1 page

--- a/example/ais-scrolly/style.css
+++ b/example/ais-scrolly/style.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #footer {
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background-color: #ccefe8;
   /* min-height: 5vh; */
   /* padding-top: 2vh; */
